@@ -1558,7 +1558,7 @@ and the width and height of the corners.</font></td></tr></table>
 <strong>Circle</strong> has a center coordinate and a coordinate for
 the outer edge.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
-Use <strong>Arc</strong> to circumscribe an arc within
+Use <strong>Arc</strong> to inscribe an elliptical arc within
 a rectangle.  Arcs require a start and end point as well as the degree
 of rotation (e.g. 130,30 200,100 45,90).</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
